@@ -339,6 +339,9 @@ Unreleased changes (1.0-dev)
      (Curtis d'Entremont, ab)
 
 127. NUTCH-683 - NUTCH-676 broke CrawlDbMerger. (dogacan)
+
+128. NUTCH-631 - MoreIndexingFilter fails with NoSuchElementException
+     (Stefan Will, siren)
      
 Release 0.9 - 2007-04-02
 
